11/11/2004
----------
1. fix a bug that caused the following warning in system log on linux system
   "application bug: perl5.8.3 has SIGCHLD set to SIG_IGN but calls wait()..."
   (thanks to Joachim Vorrath, joachim.vorrath.AT.de.easynet.net for his fix)


11/10/2004
----------
1. the import/export support for csv and tab-seperated addressbook!
   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his code)
2. add option webmail_middle_plugfile to plugin content between menubar 
   and messagelist in webmail
3. remove redundant file etc/vcard.pl


11/09/2004
----------
1. rename is_convertable to is_convertible in iconv.pl


11/08/2004
----------
1. refine the iconv routine and clean related code
2. remove debugging code
3. fix a bug in refined iconv routine


11/07/2004
----------
1. add charset support in calendar, so user can read/write a calendar
   entr no matter if his charset in preference is the same as the calendar
   entry charset


11/06/2004
----------
1. add routine decode_mimewords_iconv to decode a mimeowrd based on its own
   charset, so string encoded with charset other the message charset
   could be displayed correctly 
2. fix a bug that parameters in mailto: link (to, subject, body) were not 
   passed into the compose window correctly
   (reported by WONG, Wai Bun Ada, adawong.AT.ied.edu.hk)
3. fix a bug that agentname may be showed in wrong charset if the agent has 
   different charset than its parent contact
4. use cookie to remember the last used addressbook within a browser session
5. check the firstname/lastname field in addreditform before form submission
   to avoid unexpected error


11/05/2004
----------
1. fix a bug in addressbook that when collapse mode is off,
   checking the checkox of any group will check all groups in currentpage
2. fix a bug in addressbook that clicking save in groupedit form would
   make the following addressbook listview have only a member field instead 
   of the to, cc and bcc fields.